[package]
name = "onig"
version = "3.1.0"
authors = [
        "Will Speak <will@willspeak.me>",
        "Ivan Ivashchenko <defuz@me.com>"
]

description = """Rust-Onig is a set of rust bindings for the
            oniguruma regular expression library."""
repository = "http://github.com/iwillspeak/rust-onig"
documentation = "http://rust-onig.github.io/rust-onig/onig/"
readme = "README.md"
license = "MIT"

[features]
std-pattern = []

[dependencies]
libc = "0.2"
bitflags = "1.0"
lazy_static = "1.0"

[dependencies.onig_sys]
version = "67.0.1"
path = "onig_sys"
