[package]
name = "onig_sys"
version = "69.2.0"
authors = [
    "Will Speak <will@willspeak.me>",
    "Ivan Ivashchenko <defuz@me.com>"
]
build = "build.rs"
links = "onig"

description = """
The `onig_sys` crate contains raw rust bindings to the
oniguruma library. This crate exposes a set of unsafe
functions which can then be used by other crates to
create safe wrappers around Oniguruma.

You probably don't want to link to this crate directly;
instead check out the `onig` crate.
"""
categories = ["external-ffi-bindings"]
repository = "http://github.com/iwillspeak/rust-onig"
documentation = "http://rust-onig.github.io/rust-onig/onig_sys/"
readme = "../README.md"
license = "MIT"

[build-dependencies]
bindgen = "0.50"
pkg-config = "0.3"
cc = "=1.0.18" # pinned version to enable windows/rust v1.27.0 compilation (details @ github:rust-onig/rust-onig#99)

[features]
# Make Oniguruma print debug output for parsing/compiling and executing
print-debug = []
# include regexec(), which conflicts with libgit2
posix-api = []
